--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,6 +14,7 @@
     <link href="css/animation.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <base href="/autoimport/" />
 </head>
 
 <body>
@@ -33,4 +34,4 @@
 </body>
 
 </html>
-<base href="/DemoBlazorGitHubPages/" />
+
